@@ -19,12 +19,11 @@
 package org.apache.syncope.core.provisioning.java.pushpull;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
-import java.util.Set;
-
+import java.util.stream.Collectors;
 import org.apache.commons.lang3.exception.ExceptionUtils;
-import org.apache.commons.lang3.tuple.Pair;
 import org.apache.syncope.common.lib.AnyOperations;
 import org.apache.syncope.common.lib.request.AnyCR;
 import org.apache.syncope.common.lib.request.AnyUR;
@@ -33,6 +32,7 @@ import org.apache.syncope.common.lib.to.AnyTO;
 import org.apache.syncope.common.lib.types.AnyTypeKind;
 import org.apache.syncope.common.lib.types.AuditElements;
 import org.apache.syncope.common.lib.types.AuditElements.Result;
+import org.apache.syncope.common.lib.types.MatchType;
 import org.apache.syncope.common.lib.types.MatchingRule;
 import org.apache.syncope.common.lib.types.PatchOperation;
 import org.apache.syncope.core.provisioning.api.PropagationByResource;
@@ -45,10 +45,8 @@ import org.apache.syncope.core.persistence.api.dao.UserDAO;
 import org.apache.syncope.core.provisioning.api.propagation.PropagationException;
 import org.apache.syncope.core.spring.security.DelegatedAdministrationException;
 import org.apache.syncope.core.persistence.api.dao.VirSchemaDAO;
-import org.apache.syncope.core.persistence.api.entity.AnyUtils;
 import org.apache.syncope.core.persistence.api.entity.EntityFactory;
 import org.apache.syncope.core.persistence.api.entity.Remediation;
-import org.apache.syncope.core.persistence.api.entity.VirSchema;
 import org.apache.syncope.core.persistence.api.entity.resource.Provision;
 import org.apache.syncope.core.persistence.api.entity.task.PullTask;
 import org.apache.syncope.core.provisioning.api.AuditManager;
@@ -59,6 +57,7 @@ import org.apache.syncope.core.provisioning.api.notification.NotificationManager
 import org.apache.syncope.core.provisioning.api.pushpull.IgnoreProvisionException;
 import org.apache.syncope.core.provisioning.api.pushpull.ProvisioningReport;
 import org.apache.syncope.core.provisioning.api.pushpull.PullActions;
+import org.apache.syncope.core.persistence.api.dao.PullMatch;
 import org.apache.syncope.core.provisioning.api.pushpull.SyncopePullExecutor;
 import org.apache.syncope.core.provisioning.api.pushpull.SyncopePullResultHandler;
 import org.apache.syncope.core.provisioning.java.utils.ConnObjectUtils;
@@ -70,11 +69,12 @@ import org.quartz.JobExecutionException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.transaction.annotation.Transactional;
 
+@Transactional(rollbackFor = Throwable.class)
 public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHandler<PullTask, PullActions>
         implements SyncopePullResultHandler {
 
     @Autowired
-    protected PullUtils pullUtils;
+    protected InboundMatcher inboundMatcher;
 
     @Autowired
     protected NotificationManager notificationManager;
@@ -119,15 +119,14 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
         this.executor = executor;
     }
 
-    @Transactional
     @Override
     public boolean handle(final SyncDelta delta) {
         Provision provision = null;
         try {
             provision = profile.getTask().getResource().getProvision(delta.getObject().getObjectClass()).
                     orElseThrow(() -> new JobExecutionException(
-                    "No provision found on " + profile.getTask().getResource() + " for "
-                    + delta.getObject().getObjectClass()));
+                    "No provision found on " + profile.getTask().getResource()
+                    + " for " + delta.getObject().getObjectClass()));
 
             doHandle(delta, provision);
             executor.reportHandled(delta.getObjectClass(), delta.getObject().getName());
@@ -181,51 +180,21 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
         }
     }
 
-    protected List<ProvisioningReport> assign(
-            final SyncDelta delta, final Provision provision, final AnyUtils anyUtils)
-            throws JobExecutionException {
-
-        if (!profile.getTask().isPerformCreate()) {
-            LOG.debug("PullTask not configured for create");
-            finalize(UnmatchingRule.toEventName(UnmatchingRule.ASSIGN), Result.SUCCESS, null, null, delta);
-            return List.of();
-        }
-
-        AnyCR anyCR = connObjectUtils.getAnyCR(delta.getObject(), profile.getTask(), provision, anyUtils);
-        anyCR.getResources().add(profile.getTask().getResource().getKey());
-
-        ProvisioningReport result = new ProvisioningReport();
-        result.setOperation(ResourceOperation.CREATE);
-        result.setAnyType(provision.getAnyType().getKey());
-        result.setStatus(ProvisioningReport.Status.SUCCESS);
-        result.setName(getName(anyCR));
-        result.setUidValue(delta.getUid().getUidValue());
-
-        if (profile.isDryRun()) {
-            result.setKey(null);
-            finalize(UnmatchingRule.toEventName(UnmatchingRule.ASSIGN), Result.SUCCESS, null, null, delta);
-        } else {
-            for (PullActions action : profile.getActions()) {
-                action.beforeAssign(profile, delta, anyCR);
-            }
-
-            create(anyCR, delta, UnmatchingRule.toEventName(UnmatchingRule.ASSIGN), provision, result);
-        }
-
-        return List.of(result);
-    }
-
     protected List<ProvisioningReport> provision(
-            final SyncDelta delta, final Provision provision, final AnyUtils anyUtils)
-            throws JobExecutionException {
+            final UnmatchingRule rule,
+            final SyncDelta delta,
+            final Provision provision) throws JobExecutionException {
 
         if (!profile.getTask().isPerformCreate()) {
             LOG.debug("PullTask not configured for create");
-            finalize(UnmatchingRule.toEventName(UnmatchingRule.PROVISION), Result.SUCCESS, null, null, delta);
-            return List.of();
+            end(provision.getAnyType().getKind(), UnmatchingRule.toEventName(rule), Result.SUCCESS, null, null, delta);
+            return Collections.<ProvisioningReport>emptyList();
         }
 
-        AnyCR anyCR = connObjectUtils.getAnyCR(delta.getObject(), profile.getTask(), provision, anyUtils);
+        AnyCR anyCR = connObjectUtils.getAnyCR(delta.getObject(), profile.getTask(), provision, true);
+        if (rule == UnmatchingRule.ASSIGN) {
+            anyCR.getResources().add(profile.getTask().getResource().getKey());
+        }
 
         ProvisioningReport result = new ProvisioningReport();
         result.setOperation(ResourceOperation.CREATE);
@@ -236,16 +205,65 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
 
         if (profile.isDryRun()) {
             result.setKey(null);
-            finalize(UnmatchingRule.toEventName(UnmatchingRule.PROVISION), Result.SUCCESS, null, null, delta);
+            end(provision.getAnyType().getKind(), UnmatchingRule.toEventName(rule), Result.SUCCESS, null, null, delta);
         } else {
             for (PullActions action : profile.getActions()) {
-                action.beforeProvision(profile, delta, anyCR);
+                if (rule == UnmatchingRule.ASSIGN) {
+                    action.beforeAssign(profile, delta, anyCR);
+                } else if (rule == UnmatchingRule.PROVISION) {
+                    action.beforeProvision(profile, delta, anyCR);
+                }
             }
 
-            create(anyCR, delta, UnmatchingRule.toEventName(UnmatchingRule.PROVISION), provision, result);
+            Object output;
+            Result resultStatus;
+
+            try {
+                AnyTO created = doCreate(anyCR, delta);
+                output = created;
+                result.setKey(created.getKey());
+                result.setName(getName(created));
+                resultStatus = Result.SUCCESS;
+
+                for (PullActions action : profile.getActions()) {
+                    action.after(profile, delta, created, result);
+                }
+
+                LOG.debug("{} {} successfully created", created.getType(), created.getKey());
+            } catch (PropagationException e) {
+                // A propagation failure doesn't imply a pull failure.
+                // The propagation exception status will be reported into the propagation task execution.
+                LOG.error("Could not propagate {} {}",
+                        provision.getAnyType().getKey(), delta.getUid().getUidValue(), e);
+                output = e;
+                resultStatus = Result.FAILURE;
+            } catch (Exception e) {
+                throwIgnoreProvisionException(delta, e);
+
+                result.setStatus(ProvisioningReport.Status.FAILURE);
+                result.setMessage(ExceptionUtils.getRootCauseMessage(e));
+                LOG.error("Could not create {} {} ", provision.getAnyType().getKey(), delta.getUid().getUidValue(), e);
+                output = e;
+                resultStatus = Result.FAILURE;
+
+                if (profile.getTask().isRemediation()) {
+                    Remediation entity = entityFactory.newEntity(Remediation.class);
+                    entity.setAnyType(provision.getAnyType());
+                    entity.setOperation(ResourceOperation.CREATE);
+                    entity.setPayload(anyCR);
+                    entity.setError(result.getMessage());
+                    entity.setInstant(new Date());
+                    entity.setRemoteName(delta.getObject().getName().getNameValue());
+                    entity.setPullTask(profile.getTask());
+
+                    remediationDAO.save(entity);
+                }
+            }
+
+            end(provision.getAnyType().getKind(), UnmatchingRule.toEventName(rule), resultStatus, null, output, delta);
         }
 
-        return List.of(result);
+        return Collections.singletonList(result);
     }
 
     protected void throwIgnoreProvisionException(final SyncDelta delta, final Exception exception)
@@ -266,87 +284,35 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
         }
     }
 
-    protected void create(
-            final AnyCR anyCR,
-            final SyncDelta delta,
-            final String operation,
-            final Provision provision,
-            final ProvisioningReport result)
-            throws JobExecutionException {
-
-        Object output;
-        Result resultStatus;
-
-        try {
-            AnyTO created = doCreate(anyCR, delta);
-            output = created;
-            result.setKey(created.getKey());
-            result.setName(getName(created));
-            resultStatus = Result.SUCCESS;
-
-            for (PullActions action : profile.getActions()) {
-                action.after(profile, delta, created, result);
-            }
-
-            LOG.debug("{} {} successfully created", created.getType(), created.getKey());
-        } catch (PropagationException e) {
-            // A propagation failure doesn't imply a pull failure.
-            // The propagation exception status will be reported into the propagation task execution.
-            LOG.error("Could not propagate {} {}", provision.getAnyType().getKey(), delta.getUid().getUidValue(), e);
-            output = e;
-            resultStatus = Result.FAILURE;
-        } catch (Exception e) {
-            throwIgnoreProvisionException(delta, e);
-
-            result.setStatus(ProvisioningReport.Status.FAILURE);
-            result.setMessage(ExceptionUtils.getRootCauseMessage(e));
-            LOG.error("Could not create {} {} ", provision.getAnyType().getKey(), delta.getUid().getUidValue(), e);
-            output = e;
-            resultStatus = Result.FAILURE;
-
-            if (profile.getTask().isRemediation()) {
-                Remediation entity = entityFactory.newEntity(Remediation.class);
-                entity.setAnyType(provision.getAnyType());
-                entity.setOperation(ResourceOperation.CREATE);
-                entity.setPayload(anyCR);
-                entity.setError(result.getMessage());
-                entity.setInstant(new Date());
-                entity.setRemoteName(delta.getObject().getName().getNameValue());
-                entity.setPullTask(profile.getTask());
-
-                remediationDAO.save(entity);
-            }
-        }
-
-        finalize(operation, resultStatus, null, output, delta);
-    }
-
     protected List<ProvisioningReport> update(
-            final SyncDelta delta, final List<String> anyKeys, final Provision provision) throws JobExecutionException {
+            final SyncDelta delta,
+            final List<PullMatch> matches,
+            final Provision provision) throws JobExecutionException {
 
         if (!profile.getTask().isPerformUpdate()) {
             LOG.debug("PullTask not configured for update");
-            finalize(MatchingRule.toEventName(MatchingRule.UPDATE), Result.SUCCESS, null, null, delta);
-            return List.of();
+            end(provision.getAnyType().getKind(),
+                    MatchingRule.toEventName(MatchingRule.UPDATE), Result.SUCCESS, null, null, delta);
+            return Collections.<ProvisioningReport>emptyList();
         }
 
-        LOG.debug("About to update {}", anyKeys);
+        LOG.debug("About to update {}", matches);
 
         List<ProvisioningReport> results = new ArrayList<>();
 
-        for (String key : anyKeys) {
-            LOG.debug("About to update {}", key);
+        for (PullMatch match : matches) {
+            LOG.debug("About to update {}", match);
 
             ProvisioningReport result = new ProvisioningReport();
             result.setOperation(ResourceOperation.UPDATE);
             result.setAnyType(provision.getAnyType().getKey());
             result.setStatus(ProvisioningReport.Status.SUCCESS);
-            result.setKey(key);
+            result.setKey(match.getAny().getKey());
 
-            AnyTO before = getAnyTO(key);
+            AnyTO before = getAnyTO(match.getAny());
             if (before == null) {
                 result.setStatus(ProvisioningReport.Status.FAILURE);
-                result.setMessage(String.format("Any '%s(%s)' not found", provision.getAnyType().getKey(), key));
+                result.setMessage(String.format("Any '%s(%s)' not found", provision.getAnyType().getKey(), match));
             } else {
                 result.setName(getName(before));
             }
@@ -367,8 +333,7 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
                                 delta.getObject(),
                                 before,
                                 profile.getTask(),
-                                provision,
-                                getAnyUtils());
+                                provision);
 
                         for (PullActions action : profile.getActions()) {
                             action.beforeUpdate(profile, delta, before, anyUR);
@@ -385,7 +350,7 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
                         resultStatus = Result.SUCCESS;
                         result.setName(getName(updated));
 
-                        LOG.debug("{} {} successfully updated", provision.getAnyType().getKey(), key);
+                        LOG.debug("{} {} successfully updated", provision.getAnyType().getKey(), match);
                     } catch (PropagationException e) {
                         // A propagation failure doesn't imply a pull failure.
                         // The propagation exception status will be reported into the propagation task execution.
@@ -417,7 +382,8 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
                         }
                     }
                 }
-                finalize(MatchingRule.toEventName(MatchingRule.UPDATE),
+                end(provision.getAnyType().getKind(),
+                        MatchingRule.toEventName(MatchingRule.UPDATE),
                         resultStatus, before, output, delta, effectiveReq);
             }
             results.add(result);
@@ -426,38 +392,37 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
     }
 
     protected List<ProvisioningReport> deprovision(
+            final MatchingRule matchingRule,
             final SyncDelta delta,
-            final List<String> anyKeys,
-            final Provision provision,
-            final boolean unlink)
+            final List<PullMatch> matches,
+            final Provision provision)
             throws JobExecutionException {
 
         if (!profile.getTask().isPerformUpdate()) {
             LOG.debug("PullTask not configured for update");
-            finalize(unlink
-                    ? MatchingRule.toEventName(MatchingRule.UNASSIGN)
-                    : MatchingRule.toEventName(MatchingRule.DEPROVISION), Result.SUCCESS, null, null, delta);
-            return List.of();
+            end(provision.getAnyType().getKind(),
+                    MatchingRule.toEventName(matchingRule), Result.SUCCESS, null, null, delta);
+            return Collections.<ProvisioningReport>emptyList();
         }
 
-        LOG.debug("About to deprovision {}", anyKeys);
+        LOG.debug("About to deprovision {}", matches);
 
-        final List<ProvisioningReport> results = new ArrayList<>();
+        List<ProvisioningReport> results = new ArrayList<>();
 
-        for (String key : anyKeys) {
-            LOG.debug("About to unassign resource {}", key);
+        for (PullMatch match : matches) {
+            LOG.debug("About to unassign resource {}", match);
 
             ProvisioningReport result = new ProvisioningReport();
             result.setOperation(ResourceOperation.DELETE);
             result.setAnyType(provision.getAnyType().getKey());
             result.setStatus(ProvisioningReport.Status.SUCCESS);
-            result.setKey(key);
+            result.setKey(match.getAny().getKey());
 
-            AnyTO before = getAnyTO(key);
+            AnyTO before = getAnyTO(match.getAny());
 
             if (before == null) {
                 result.setStatus(ProvisioningReport.Status.FAILURE);
-                result.setMessage(String.format("Any '%s(%s)' not found", provision.getAnyType().getKey(), key));
+                result.setMessage(String.format("Any '%s(%s)' not found", provision.getAnyType().getKey(), match));
             }
 
             if (!profile.isDryRun()) {
@@ -471,43 +436,37 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
                     result.setName(getName(before));
 
                     try {
-                        if (unlink) {
+                        if (matchingRule == MatchingRule.UNASSIGN) {
                             for (PullActions action : profile.getActions()) {
                                 action.beforeUnassign(profile, delta, before);
                             }
-                        } else {
+                        } else if (matchingRule == MatchingRule.DEPROVISION) {
                             for (PullActions action : profile.getActions()) {
                                 action.beforeDeprovision(profile, delta, before);
                             }
                         }
 
                         PropagationByResource<String> propByRes = new PropagationByResource<>();
-                        propByRes.add(ResourceOperation.DELETE, profile.getTask().getResource().getKey());
-
-                        PropagationByResource<Pair<String, String>> propByLinkedAccount = new PropagationByResource<>();
-                        if (getAnyUtils().anyTypeKind() == AnyTypeKind.USER) {
-                            userDAO.findLinkedAccounts(key).forEach(account -> propByLinkedAccount.add(
-                                    ResourceOperation.DELETE,
-                                    Pair.of(account.getResource().getKey(), account.getConnObjectKeyValue())));
-                        }
+                        propByRes.add(ResourceOperation.DELETE, provision.getResource().getKey());
 
                         taskExecutor.execute(propagationManager.getDeleteTasks(
                                 provision.getAnyType().getKind(),
-                                key,
+                                match.getAny().getKey(),
                                 propByRes,
-                                propByLinkedAccount,
+                                null,
                                 null),
-                                false);
+                                false,
+                                adminUser);
 
                         AnyUR anyUR = null;
-                        if (unlink) {
-                            anyUR = getAnyUtils().newAnyUR(key);
+                        if (matchingRule == MatchingRule.UNASSIGN) {
+                            anyUR = getAnyUtils().newAnyUR(match.getAny().getKey());
                             anyUR.getResources().add(new StringPatchItem.Builder().
                                     operation(PatchOperation.DELETE).
                                     value(profile.getTask().getResource().getKey()).build());
                         }
                         if (anyUR == null) {
-                            output = getAnyTO(key);
+                            output = getAnyTO(match.getAny());
                         } else {
                             output = doUpdate(before, anyUR, delta, result);
                         }
@@ -518,7 +477,7 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
 
                         resultStatus = Result.SUCCESS;
 
-                        LOG.debug("{} {} successfully updated", provision.getAnyType().getKey(), key);
+                        LOG.debug("{} {} successfully updated", provision.getAnyType().getKey(), match);
                     } catch (PropagationException e) {
                         // A propagation failure doesn't imply a pull failure.
                         // The propagation exception status will be reported into the propagation task execution.
@@ -537,9 +496,8 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
                         resultStatus = Result.FAILURE;
                     }
                 }
-                finalize(unlink
-                        ? MatchingRule.toEventName(MatchingRule.UNASSIGN)
-                        : MatchingRule.toEventName(MatchingRule.DEPROVISION), resultStatus, before, output, delta);
+                end(provision.getAnyType().getKind(),
+                        MatchingRule.toEventName(matchingRule), resultStatus, before, output, delta);
             }
             results.add(result);
         }
@@ -549,37 +507,39 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
 
     protected List<ProvisioningReport> link(
             final SyncDelta delta,
-            final List<String> anyKeys,
+            final List<PullMatch> matches,
             final Provision provision,
             final boolean unlink)
             throws JobExecutionException {
 
         if (!profile.getTask().isPerformUpdate()) {
             LOG.debug("PullTask not configured for update");
-            finalize(unlink
-                    ? MatchingRule.toEventName(MatchingRule.UNLINK)
-                    : MatchingRule.toEventName(MatchingRule.LINK), Result.SUCCESS, null, null, delta);
-            return List.of();
+            end(provision.getAnyType().getKind(),
+                    unlink
+                            ? MatchingRule.toEventName(MatchingRule.UNLINK)
+                            : MatchingRule.toEventName(MatchingRule.LINK),
+                    Result.SUCCESS, null, null, delta);
+            return Collections.<ProvisioningReport>emptyList();
         }
 
-        LOG.debug("About to update {}", anyKeys);
+        LOG.debug("About to update {}", matches);
 
         final List<ProvisioningReport> results = new ArrayList<>();
 
-        for (String key : anyKeys) {
-            LOG.debug("About to unassign resource {}", key);
+        for (PullMatch match : matches) {
+            LOG.debug("About to unassign resource {}", match);
 
             ProvisioningReport result = new ProvisioningReport();
             result.setOperation(ResourceOperation.NONE);
             result.setAnyType(provision.getAnyType().getKey());
             result.setStatus(ProvisioningReport.Status.SUCCESS);
-            result.setKey(key);
+            result.setKey(match.getAny().getKey());
 
-            AnyTO before = getAnyTO(key);
+            AnyTO before = getAnyTO(match.getAny());
 
             if (before == null) {
                 result.setStatus(ProvisioningReport.Status.FAILURE);
-                result.setMessage(String.format("Any '%s(%s)' not found", provision.getAnyType().getKey(), key));
+                result.setMessage(String.format("Any '%s(%s)' not found", provision.getAnyType().getKey(), match));
             }
 
             if (!profile.isDryRun()) {
@@ -618,7 +578,7 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
 
                         resultStatus = Result.SUCCESS;
 
-                        LOG.debug("{} {} successfully updated", provision.getAnyType().getKey(), key);
+                        LOG.debug("{} {} successfully updated", provision.getAnyType().getKey(), match);
                     } catch (PropagationException e) {
                         // A propagation failure doesn't imply a pull failure.
                         // The propagation exception status will be reported into the propagation task execution.
@@ -637,9 +597,10 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
                         resultStatus = Result.FAILURE;
                     }
                 }
-                finalize(unlink
-                        ? MatchingRule.toEventName(MatchingRule.UNLINK)
-                        : MatchingRule.toEventName(MatchingRule.LINK),
+                end(provision.getAnyType().getKind(),
+                        unlink
+                                ? MatchingRule.toEventName(MatchingRule.UNLINK)
+                                : MatchingRule.toEventName(MatchingRule.LINK),
                         resultStatus, before, output, delta, effectiveReq);
             }
             results.add(result);
@@ -650,30 +611,31 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
 
     protected List<ProvisioningReport> delete(
             final SyncDelta delta,
-            final List<String> anyKeys,
+            final List<PullMatch> matches,
             final Provision provision)
             throws JobExecutionException {
 
         if (!profile.getTask().isPerformDelete()) {
             LOG.debug("PullTask not configured for delete");
-            finalize(ResourceOperation.DELETE.name().toLowerCase(), Result.SUCCESS, null, null, delta);
-            return List.of();
+            end(provision.getAnyType().getKind(),
+                    ResourceOperation.DELETE.name().toLowerCase(), Result.SUCCESS, null, null, delta);
+            return Collections.<ProvisioningReport>emptyList();
         }
 
-        LOG.debug("About to delete {}", anyKeys);
+        LOG.debug("About to delete {}", matches);
 
         List<ProvisioningReport> results = new ArrayList<>();
 
-        anyKeys.forEach(key -> {
+        matches.forEach(match -> {
             Object output;
             Result resultStatus = Result.FAILURE;
 
             ProvisioningReport result = new ProvisioningReport();
 
             try {
-                AnyTO before = getAnyTO(key);
+                AnyTO before = getAnyTO(match.getAny());
 
-                result.setKey(key);
+                result.setKey(match.getAny().getKey());
                 result.setName(getName(before));
                 result.setOperation(ResourceOperation.DELETE);
                 result.setAnyType(provision.getAnyType().getKey());
@@ -685,8 +647,10 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
                     }
 
                     try {
-                        getProvisioningManager().
-                                delete(key, Set.of(profile.getTask().getResource().getKey()), true);
+                        getProvisioningManager().delete(
+                                match.getAny().getKey(),
+                                Collections.singleton(profile.getTask().getResource().getKey()),
+                                true);
                         output = null;
                         resultStatus = Result.SUCCESS;
 
@@ -698,14 +662,14 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
 
                         result.setStatus(ProvisioningReport.Status.FAILURE);
                         result.setMessage(ExceptionUtils.getRootCauseMessage(e));
-                        LOG.error("Could not delete {} {}", provision.getAnyType().getKey(), key, e);
+                        LOG.error("Could not delete {} {}", provision.getAnyType().getKey(), match, e);
                         output = e;
 
                         if (profile.getTask().isRemediation()) {
                             Remediation entity = entityFactory.newEntity(Remediation.class);
                             entity.setAnyType(provision.getAnyType());
                             entity.setOperation(ResourceOperation.DELETE);
-                            entity.setPayload(key);
+                            entity.setPayload(match.getAny().getKey());
                             entity.setError(result.getMessage());
                             entity.setInstant(new Date());
                             entity.setRemoteName(delta.getObject().getName().getNameValue());
@@ -715,16 +679,17 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
                         }
                     }
 
-                    finalize(ResourceOperation.DELETE.name().toLowerCase(), resultStatus, before, output, delta);
+                    end(provision.getAnyType().getKind(),
+                            ResourceOperation.DELETE.name().toLowerCase(), resultStatus, before, output, delta);
                 }
 
                 results.add(result);
             } catch (NotFoundException e) {
-                LOG.error("Could not find {} {}", provision.getAnyType().getKey(), key, e);
+                LOG.error("Could not find {} {}", provision.getAnyType().getKey(), match, e);
             } catch (DelegatedAdministrationException e) {
-                LOG.error("Not allowed to read {} {}", provision.getAnyType().getKey(), key, e);
+                LOG.error("Not allowed to read {} {}", provision.getAnyType().getKey(), match, e);
             } catch (Exception e) {
-                LOG.error("Could not delete {} {}", provision.getAnyType().getKey(), key, e);
+                LOG.error("Could not delete {} {}", provision.getAnyType().getKey(), match, e);
             }
         });
 
@@ -733,7 +698,7 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
 
     protected List<ProvisioningReport> ignore(
             final SyncDelta delta,
-            final List<String> anyKeys,
+            final List<PullMatch> matches,
             final Provision provision,
             final boolean matching,
             final String... message)
@@ -743,7 +708,7 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
 
         List<ProvisioningReport> results = new ArrayList<>();
 
-        if (anyKeys == null) {
+        if (matches == null) {
             ProvisioningReport report = new ProvisioningReport();
             report.setKey(null);
             report.setName(delta.getObject().getUid().getUidValue());
@@ -756,9 +721,9 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
 
             results.add(report);
         } else {
-            for (String anyKey : anyKeys) {
+            matches.forEach(match -> {
                 ProvisioningReport report = new ProvisioningReport();
-                report.setKey(anyKey);
+                report.setKey(match.getAny().getKey());
                 report.setName(delta.getObject().getUid().getUidValue());
                 report.setOperation(ResourceOperation.NONE);
                 report.setAnyType(provision.getAnyType().getKey());
@@ -768,14 +733,107 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
                 }
 
                 results.add(report);
-            }
+            });
         }
 
-        finalize(matching
-                ? MatchingRule.toEventName(MatchingRule.IGNORE)
-                : UnmatchingRule.toEventName(UnmatchingRule.IGNORE), Result.SUCCESS, null, null, delta);
+        end(provision.getAnyType().getKind(),
+                matching
+                        ? MatchingRule.toEventName(MatchingRule.IGNORE)
+                        : UnmatchingRule.toEventName(UnmatchingRule.IGNORE), Result.SUCCESS, null, null, delta);
 
         return results;
+    }
+
+    protected void handleAnys(
+            final SyncDelta delta,
+            final List<PullMatch> matches,
+            final Provision provision) throws JobExecutionException {
+
+        if (matches.isEmpty()) {
+            LOG.debug("Nothing to do");
+            return;
+        }
+
+        if (SyncDeltaType.CREATE_OR_UPDATE == delta.getDeltaType()) {
+            if (matches.get(0).getAny() == null) {
+                switch (profile.getTask().getUnmatchingRule()) {
+                    case ASSIGN:
+                    case PROVISION:
+                        profile.getResults().addAll(
+                                provision(profile.getTask().getUnmatchingRule(), delta, provision));
+                        break;
+
+                    case IGNORE:
+                        profile.getResults().addAll(ignore(delta, null, provision, false));
+                        break;
+
+                    default:
+                    // do nothing
+                    }
+            } else {
+                // update VirAttrCache
+                virSchemaDAO.findByProvision(provision).forEach(virSchema -> {
+                    Attribute attr = delta.getObject().getAttributeByName(virSchema.getExtAttrName());
+                    matches.forEach(match -> {
+                        if (attr == null) {
+                            virAttrCache.expire(
+                                    provision.getAnyType().getKey(),
+                                    match.getAny().getKey(),
+                                    virSchema.getKey());
+                        } else {
+                            virAttrCache.put(
+                                    provision.getAnyType().getKey(),
+                                    match.getAny().getKey(),
+                                    virSchema.getKey(),
+                                    new VirAttrCacheValue(attr.getValue()));
+                        }
+                    });
+                });
+
+                switch (profile.getTask().getMatchingRule()) {
+                    case UPDATE:
+                        profile.getResults().addAll(update(delta, matches, provision));
+                        break;
+
+                    case DEPROVISION:
+                    case UNASSIGN:
+                        profile.getResults().addAll(
+                                deprovision(profile.getTask().getMatchingRule(), delta, matches, provision));
+                        break;
+
+                    case LINK:
+                        profile.getResults().addAll(link(delta, matches, provision, false));
+                        break;
+
+                    case UNLINK:
+                        profile.getResults().addAll(link(delta, matches, provision, true));
+                        break;
+
+                    case IGNORE:
+                        profile.getResults().addAll(ignore(delta, matches, provision, true));
+                        break;
+
+                    default:
+                    // do nothing
+                    }
+            }
+        } else if (SyncDeltaType.DELETE == delta.getDeltaType()) {
+            profile.getResults().addAll(delete(delta, matches, provision));
+        }
+    }
+
+    protected void handleLinkedAccounts(
+            final SyncDelta delta,
+            final List<PullMatch> matches,
+            final Provision provision) throws JobExecutionException {
+
+        if (matches.isEmpty()) {
+            LOG.debug("Nothing to do");
+            return;
+        }
+
+        // nothing to do in the general case
+        LOG.warn("Unexpected linked accounts found for {}: {}", provision.getAnyType().getKind(), matches);
     }
 
     /**
@@ -786,126 +844,61 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
      * @throws JobExecutionException in case of pull failure.
      */
     protected void doHandle(final SyncDelta delta, final Provision provision) throws JobExecutionException {
-        AnyUtils anyUtils = getAnyUtils();
-
         LOG.debug("Process {} for {} as {}",
                 delta.getDeltaType(), delta.getUid().getUidValue(), delta.getObject().getObjectClass());
 
-        SyncDelta processed = delta;
+        SyncDelta finalDelta = delta;
         for (PullActions action : profile.getActions()) {
-            processed = action.preprocess(profile, processed);
+            finalDelta = action.preprocess(profile, finalDelta);
         }
 
         LOG.debug("Transformed {} for {} as {}",
-                processed.getDeltaType(), processed.getUid().getUidValue(), processed.getObject().getObjectClass());
+                finalDelta.getDeltaType(), finalDelta.getUid().getUidValue(), finalDelta.getObject().getObjectClass());
 
         try {
-            List<String> keys = pullUtils.match(processed, provision, anyUtils);
+            List<PullMatch> matches = inboundMatcher.match(finalDelta, provision);
             LOG.debug("Match(es) found for {} as {}: {}",
-                    processed.getUid().getUidValue(), processed.getObject().getObjectClass(), keys);
+                    finalDelta.getUid().getUidValue(), finalDelta.getObject().getObjectClass(), matches);
 
-            if (keys.size() > 1) {
+            if (matches.size() > 1) {
                 switch (profile.getConflictResolutionAction()) {
                     case IGNORE:
                         throw new IgnoreProvisionException("More than one match found for "
-                                + processed.getObject().getUid().getUidValue() + ": " + keys);
+                                + finalDelta.getObject().getUid().getUidValue() + ": " + matches);
 
                     case FIRSTMATCH:
-                        keys = keys.subList(0, 1);
+                        matches = matches.subList(0, 1);
                         break;
 
                     case LASTMATCH:
-                        keys = keys.subList(keys.size() - 1, keys.size());
+                        matches = matches.subList(matches.size() - 1, matches.size());
                         break;
 
                     default:
-                    // keep anyKeys unmodified
+                    // keep matches unmodified
                 }
             }
 
-            if (SyncDeltaType.CREATE_OR_UPDATE == processed.getDeltaType()) {
-                if (keys.isEmpty()) {
-                    switch (profile.getTask().getUnmatchingRule()) {
-                        case ASSIGN:
-                            profile.getResults().addAll(assign(processed, provision, anyUtils));
-                            break;
+            // users, groups and any objects
+            handleAnys(
+                    finalDelta,
+                    matches.stream().
+                            filter(match -> match.getMatchTarget() == MatchType.ANY).
+                            collect(Collectors.toList()), provision);
 
-                        case PROVISION:
-                            profile.getResults().addAll(provision(processed, provision, anyUtils));
-                            break;
-
-                        case IGNORE:
-                            profile.getResults().addAll(ignore(processed, null, provision, false));
-                            break;
-
-                        default:
-                        // do nothing
-                    }
-                } else {
-                    // update VirAttrCache
-                    for (VirSchema virSchema : virSchemaDAO.findByProvision(provision)) {
-                        Attribute attr = processed.getObject().getAttributeByName(virSchema.getExtAttrName());
-                        for (String anyKey : keys) {
-                            if (attr == null) {
-                                virAttrCache.expire(
-                                        provision.getAnyType().getKey(),
-                                        anyKey,
-                                        virSchema.getKey());
-                            } else {
-                                VirAttrCacheValue cacheValue = new VirAttrCacheValue();
-                                cacheValue.setValues(attr.getValue());
-                                virAttrCache.put(
-                                        provision.getAnyType().getKey(),
-                                        anyKey,
-                                        virSchema.getKey(),
-                                        cacheValue);
-                            }
-                        }
-                    }
-
-                    switch (profile.getTask().getMatchingRule()) {
-                        case UPDATE:
-                            profile.getResults().addAll(update(processed, keys, provision));
-                            break;
-
-                        case DEPROVISION:
-                            profile.getResults().addAll(deprovision(processed, keys, provision, false));
-                            break;
-
-                        case UNASSIGN:
-                            profile.getResults().addAll(deprovision(processed, keys, provision, true));
-                            break;
-
-                        case LINK:
-                            profile.getResults().addAll(link(processed, keys, provision, false));
-                            break;
-
-                        case UNLINK:
-                            profile.getResults().addAll(link(processed, keys, provision, true));
-                            break;
-
-                        case IGNORE:
-                            profile.getResults().addAll(ignore(processed, keys, provision, true));
-                            break;
-
-                        default:
-                        // do nothing
-                    }
-                }
-            } else if (SyncDeltaType.DELETE == processed.getDeltaType()) {
-                if (keys.isEmpty()) {
-                    finalize(ResourceOperation.DELETE.name().toLowerCase(), Result.SUCCESS, null, null, processed);
-                    LOG.debug("No match found for deletion");
-                } else {
-                    profile.getResults().addAll(delete(processed, keys, provision));
-                }
-            }
+            // linked accounts
+            handleLinkedAccounts(
+                    finalDelta,
+                    matches.stream().
+                            filter(match -> match.getMatchTarget() == MatchType.LINKED_ACCOUNT).
+                            collect(Collectors.toList()), provision);
         } catch (IllegalStateException | IllegalArgumentException e) {
             LOG.warn(e.getMessage());
         }
     }
 
-    protected void finalize(
+    protected void end(
+            final AnyTypeKind anyTypeKind,
             final String event,
             final Result result,
             final Object before,
@@ -917,12 +910,10 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
             this.latestResult = result;
         }
 
-        AnyUtils anyUtils = getAnyUtils();
-
         notificationManager.createTasks(
                 AuthContextUtils.getUsername(),
                 AuditElements.EventCategoryType.PULL,
-                anyUtils.anyTypeKind().name().toLowerCase(),
+                anyTypeKind.name().toLowerCase(),
                 profile.getTask().getResource().getKey(),
                 event,
                 result,
@@ -934,7 +925,7 @@ public abstract class AbstractPullResultHandler extends AbstractSyncopeResultHan
         auditManager.audit(
                 AuthContextUtils.getUsername(),
                 AuditElements.EventCategoryType.PULL,
-                anyUtils.anyTypeKind().name().toLowerCase(),
+                anyTypeKind.name().toLowerCase(),
                 profile.getTask().getResource().getKey(),
                 event,
                 result,
